nginx-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx
  namespace: testing
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
        version: v1.15.3
    spec:
      containers:
      - name: nginx
        image: nginx：1.15.3
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.5"
          limits:
            memory: "64Mi"
            cpu: "0.5"
        ports:
        - containerPort: 80
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1 
      volumes:
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: testing
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  labels:
    app: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # https redirect off
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - testing.host.com
    secretName: nginx-ingress-secret
  rules:
  - host: testing.host.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
